# NP-Engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  configure.sh  format.sh  run.sh
docs/: uml.mdj
include/: NP-Engine.hpp
include/Application/: ApplicationEvent.hpp  Layer.hpp
include/Concurrency/: Concurrency.hpp  MpmcQueue.hpp  ThreadToken.hpp
include/Container/: container_traits.hpp  init_list.hpp  oset.hpp
include/Core/: Core.hpp  DmsLineSegment.hpp
include/ECS/: ECS.hpp
include/Event/: EventImpl.hpp
include/Filesystem/: Filesystem.hpp
include/Input/: MouseCodes.hpp
include/Insight/: ScopedTimer.hpp
include/JobSystem/: JobFunction.hpp  JobRecord.hpp  JobSystem.hpp
include/Math/: AABB.hpp  MidpointCircle.hpp  Polygon.hpp  exp_functions.hpp  statistic_functions.hpp
include/Memory/: ExplicitListAllocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp  RedBlackTreeAllocator.hpp  TraitAllocator.hpp  sptr.hpp
include/NP-Engine/: NP-Engine.hpp
include/NP-Engine/Algorithms/: Algorithms.hpp  BresenhamLine.hpp  ClipLine.hpp  MidpointCircle.hpp  pnpoly.hpp
include/NP-Engine/Application/: AccumulatingAllocator.hpp  Application.hpp  ApplicationCloseEvent.hpp  ApplicationEvent.hpp  ApplicationEvents.hpp  ApplicationImpl.hpp  ApplicationPopupEvent.hpp  (+14 more)
include/Noise/: Noise.hpp
include/Physics/: Constants.h
include/Primitive/: primitive_types.hpp  sync_types.hpp
include/Serialization/: Serialization.hpp
include/Time/: Time.hpp
include/TypeTraits/: TypeTraitsImpl.hpp
include/Utility/: UtilityImpl.hpp
src/: CMakeLists.txt
src/Application/: Application.cpp  Application.hpp  ApplicationEvent.hpp  ApplicationImpl.hpp  Layer.hpp  LayerContainer.hpp  Popup.cpp  Popup.mm  Window.cpp  Window.hpp  WindowCloseEvent.hpp  WindowEvents.hpp  WindowLayer.cpp  WindowResizeEvent.hpp
src/Concurrency/: PadObject.hpp  Thread.cpp  ThreadPool.hpp
src/Container/: Container.hpp  array.hpp  deque.hpp  deque_iterator.hpp  init_list.hpp  iterator.hpp  priority_queue.hpp  queue.hpp  uset.hpp  vector.hpp
src/Core/: Color.hpp  DmsImage.hpp  DmsLineSegment.hpp  DrawableImage.hpp  Image.hpp
src/Event/: Event.hpp  EventImpl.hpp  EventQueue.hpp
src/Filesystem/: filesystem_functions.hpp
src/Foundation/: Constants.hpp  ConstantsSettings.hpp
src/GPU/Detail/OpenGL/: OpenGLRenderer.cpp
src/GPU/Detail/Vulkan/shaders/: fragment.glsl  light_vertex.glsl  object_fragment.glsl  object_vertex.glsl  vertex.glsl
src/GPU/Interface/: BufferResource.cpp  Commands.cpp  ComputePipeline.cpp  Detail.cpp  DetailInstance.cpp  Device.cpp  FrameContext.cpp  Framebuffer.cpp  Framebuffers.cpp  GraphicsPipeline.cpp  ImageResource.cpp  ImageResourceView.cpp  Pipeline.cpp  PresentTarget.cpp  Queue.cpp  RenderContext.cpp  RenderDevice.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderShader.cpp  RenderTarget.cpp  Resource.cpp  ResourceGroup.cpp  SamplerResource.cpp  Scene.cpp  Shader.cpp
src/Graphics/: Graphics.cpp  GraphicsImpl.cpp
src/Graphics/Detail/Vulkan/: VulkanDevice.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp
src/Graphics/Interface/: DetailInstance.cpp  Device.cpp  Framebuffers.cpp  GraphicsDetailType.cpp  RenderContext.cpp  RenderDevice.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderShader.cpp  RenderTarget.cpp  RenderableImage.cpp  RenderableLight.cpp  RenderableModel.cpp  Renderer.cpp  RhiType.cpp  Scene.cpp
src/Graphics/RHI/OpenGL/: OpenGLRenderer.cpp  Renderer.cpp
src/Graphics/RHI/Vulkan/: Renderer.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp
src/Graphics/RHI/Vulkan/shaders/: fragment.glsl  light_fragment.glsl  light_vertex.glsl  object_fragment.glsl  object_vertex.glsl  vertex.glsl
src/Graphics/RPI/: Device.cpp  RenderableImage.cpp  RenderableLight.cpp  RenderableModel.cpp  Renderer.cpp  RhiType.cpp  Scene.cpp
src/Input/: InputSource.cpp  KeyEvent.hpp
src/Insight/: Insight.hpp  Instrumentor.cpp  Instrumentor.hpp  Log.cpp  Log.hpp  Timer.hpp
src/JobSystem/: Job.hpp  JobSystemImpl.hpp  JobWorker.cpp  JobWorker.hpp  JobWorkerToken.hpp
src/Math/: ClipLine.hpp  Math.hpp  Point.hpp  PointMath.hpp  Polygon.cpp  PolygonUtility.cpp  PolygonUtility.hpp  ease_functions.hpp  math_functions.hpp  owen.hpp  pnpoly.hpp  statistic_functions.hpp  trig_functions.hpp
src/Memory/: Allocator.hpp  Block.hpp  CAllocator.cpp  CAllocator.hpp  ExplicitListAllocator.hpp  ExplicitSegListAllocator.hpp  FallbackAllocator.hpp  ImplicitListAllocator.hpp  LinearAllocator.hpp  LockingPoolAllocator.hpp  Margin.hpp  Memory.hpp  MemoryFunctions.hpp  ObjectPool.hpp  PoolAllocator.hpp  RedBlackTreeAllocator.hpp  SegregatedAllocator.hpp  SizedAllocator.hpp  TraitAllocator.cpp  uptr.hpp
src/NP-Engine-main/: NP-Engine-main.cpp
src/Network/: Network.cpp
src/Network/Interface/: Context.cpp  Resolver.cpp  Socket.cpp
src/Noise/: Perlin.hpp  Simplex.hpp  Turbulence.hpp
src/Physics/: Body.cpp  Body.hpp  ContactListener.cpp  ContactListener.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Physics.cpp  Physics.hpp
src/Platform/: Platform.hpp
src/Platform/Apple/Application/: AppleWindow.cpp
src/Platform/Linux/Application/: LinuxWindow.cpp
src/Platform/Windows/Application/: WindowsWindow.cpp
src/Primitive/: Primitive.hpp  atomic_types.hpp  primitive_types.hpp  primitive_values.hpp  stream_types.hpp
src/Random/: PcgRandutils.hpp  Random.hpp  RandomEngine.cpp  RandomSeed.hpp
src/Renderer/: Renderer.hpp  RendererImpl.cpp  RendererImpl.hpp
src/Renderer/RHI/OpenGL/: Renderer.cpp
src/Renderer/RHI/Vulkan/: Renderer.cpp
src/Serialization/: Serializable.hpp  json.hpp
src/System/: Popup.cpp  Popup.mm  System.cpp
src/Thread/: Thread.cpp  ThreadImpl.cpp
src/TypeTraits/: TypeTraits.hpp  TypeTraitsImpl.hpp
src/Utility/: Utility.hpp  UtilityImpl.hpp
src/Window/: Window.cpp
src/Window/Interface/: Popup.cpp  Popup.mm  WindowDetailType.cpp  WindowImpl.cpp
test/: CMakeLists.txt  NP-Engine-Tester.cpp  build.sh  clean.sh  cloc.sh  configure.sh  format.sh  run.sh
test/include/: NP-Engine-Tester.hpp
test/src/: NP-Engine-Tester.cpp
(+559 files in other folders)
